# py_trees_ros_interfaces-release

./: .cproject  .project  CMakeLists.txt  README.md  Readme.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
action/: Dock.action  MoveBase.action  Rotate.action
debian/: changelog  control  copyright  gbp.conf  rules
msg/: ActivityItem.msg  Behaviour.msg  BehaviourTree.msg  ServiceDetails.msg  SnapshotStreamParameters.msg  Statistics.msg
rpm/: ros-galactic-py-trees-ros-interfaces.spec  ros-humble-py-trees-ros-interfaces.spec  ros-rolling-py-trees-ros-interfaces.spec  template.spec
srv/: CloseBlackboardStream.srv  CloseSnapshotStream.srv  IntrospectServices.srv  OpenBlackboardStream.srv  OpenSnapshotStream.srv  ReconfigureSnapshotStream.srv  StatusReport.srv
